--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 env:
   - LOGGING=info
 install:
-  - apt install libopenblas-dev
+  - mkdir openblas && cd openblass && git clone https://github.com/xianyi/OpenBLAS.git && make && ls && cd ..
   - pip install -r requirements.txt
   - pip install pytest pytest-cov wheel codecov
   - python setup.py bdist_wheel
