--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install libopenblas-dev
   - ls -la /usr/lib | grep blas
-  - ls $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
   - pip install -r requirements.txt
-  - ln -s /usr/lib/libopenblas.a $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.a
+  - ln -s /usr/lib/libopenblas.so $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.so
+  - ln -s /usr/lib/libopenblas.so $PWD/libopenblas.so
+  - python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())"
+  - ls $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
   - pip install pytest pytest-cov wheel codecov
 install:
   - python setup.py bdist_wheel
