--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())"
   - ls $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
   - ldd $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/qasm_controller_wrapper.cpython-35m-x86_64-linux-gnu.so
+  - readelf -d $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/qasm_controller_wrapper.cpython-35m-x86_64-linux-gnu.so
   - pip install pytest pytest-cov wheel codecov
 install:
   - python setup.py bdist_wheel
