--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - LOGGING=info
 before_install:
   - sudo apt-get update
-  - sudo apt-get install numpy libopenblas-dev
+  - sudo apt-get install python3-numpy libopenblas-dev
   - ls -la /usr/lib | grep blas
   - pip install -r requirements.txt
 #  - ln -s /usr/lib/libopenblas.a $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.a
