--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,16 @@ env:
 before_install:
   - sudo apt-get update
   - sudo apt-get install python3-numpy libopenblas-dev
-  - ls -la /usr/lib | grep blas
-  - pip install -r requirements.txt
+  - pip install --upgrade -r requirements.txt
 #  - ln -s /usr/lib/libopenblas.a $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.a
 #  - ln -s /usr/lib/libopenblas.so $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.so
 #  - ln -s /usr/lib/libopenblas.a $PWD/libopenblas.a
 #  - ln -s /usr/lib/libopenblas.so $PWD/libopenblas.so
 #  - python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())"
 #  - ls $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
-#  - ldd $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/qasm_controller_wrapper.cpython-35m-x86_64-linux-gnu.so
-#  - readelf -d $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/qasm_controller_wrapper.cpython-35m-x86_64-linux-gnu.so
-  - pip install pytest pytest-cov wheel codecov
+  - ldd $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/qasm_controller_wrapper.cpython-35m-x86_64-linux-gnu.so
+  - readelf -d $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/qasm_controller_wrapper.cpython-35m-x86_64-linux-gnu.so
+  - pip install --upgrade pytest pytest-cov wheel codecov
 install:
   - python setup.py bdist_wheel
   - pip install dist/dc_qiskit_qml*.whl
