--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ env:
   - LOGGING=info
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libomp-dev python3-numpy libopenblas-dev
+  - sudo apt-get install gcc-multilib
+  - sudo apt-get install python3-numpy libopenblas-dev
+  #- sudo apt install libomp-dev
   - pip install --upgrade -r requirements.txt
 #  - ln -s /usr/lib/libopenblas.a $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.a
 #  - ln -s /usr/lib/libopenblas.so $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")/libopenblas.so
