Fixing versions seems to be a good idea, but then different version of python won't work. For now, I remove them again.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-bitstring==3.1.7
-dc_qiskit_algorithms==0.0.12
-numpy==1.19.5
-qiskit==0.23.2
-scikit_learn==0.23.0
-scipy==1.6.0
+bitstring
+dc_qiskit_algorithms
+numpy
+qiskit
+scikit_learn
+scipy
